# media-bot

./: .cursorrules  .gitignore  MEMORY_BANK.md  Makefile  README.md  pyproject.toml
app/: __init__.py  __main__.py  bot.py  config.py  init_flow.py  main.py
app/bot/: __init__.py  auth.py  bot.py  callback_data.py  handlers.py  integrated_bot.py  screen_manager.py  screen_registry.py  session.py  session_manager.py
app/bot/screens/: __init__.py  audio_output_selection.py  audio_track_selection.py  base.py  downloads.py  hdmi_port_selection.py  library.py  main_menu.py  movie_selection.py  player.py  resolution_selection.py  rutracker_auth.py  search.py  setup_confirmation.py  smart_rewind.py  status.py  subtitle_selection.py  system_control.py  torrent.py  torrent_providers.py  torrent_results.py  tv.py
app/player/: __init__.py  mpv_controller.py
app/scheduler/: __init__.py  series_scheduler.py  series_updater.py  watch_progress.py
app/scripts/: prerun.sh
app/templates/: rutracker_setup.html  rutracker_success.html  setup.html  setup_ap.html  setup_status.html  setup_success.html
app/torrent/: __init__.py  downloader.py  file_utils.py  importer.py  metadata_fetcher.py  searcher.py  validator.py
app/tv/: __init__.py  hdmi_cec.py
memory_bank/: DOWNLOAD_PERSISTENCE_IMPLEMENTATION.md  IMDB_INTEGRATION_SUMMARY.md  IMDB_METADATA_PRESERVATION.md  LIBRARY_SCREEN_REFACTOR_SUMMARY.md  LIBRARY_SCREEN_REWRITE.md  MEMORY_BANK.md  MOVIE_SELECTION_STATE_REFACTOR.md  ON_DEMAND_DETAILS_OPTIMIZATION.md  RENDER_OPTIONS_REFACTORING.md  TORRENT_DOWNLOAD_OPTIMIZATION.md  TORRENT_SCREEN_UNIFICATION.md
