[project]
name = "media-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitri Tsiu",email = "laoqiu1015@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "python-telegram-bot>=20.7",
    "pydantic>=2.12.4",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
