[project]
name = "media-bot"
version = "0.1.0"
description = "Smart Raspberry Pi media center with Telegram bot control"
authors = [
    {name = "Dmitri Tsiu",email = "laoqiu1015@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.4,<3.0.0",
    "python-telegram-bot[job-queue]>=21.0,<22.0",
    "python-mpv>=1.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "libtorrent>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
